-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.1
-
None
-
Qt 5.10.1
WIndows 10 64bit
Qt Creator 4.6.1
-
ae26a16a85d0438369259742b781af15bffa45f4
When I run my application, I always see "QML debugging is enabled. Only use this in a safe environment." message even if I unchecked "Enable QML debugging" checkbox in Build Settings.
My project is QBS.
| For Gerrit Dashboard: QTCREATORBUG-20377 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 229044,2 | QbsProjectManager: Fix the "Enable QML debugging" checkbox | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |