QbsProjectManager: Fix the "Enable QML debugging" checkbox

Once it was enabled, the value passed to qbs would never get reset.

Task-number: QTCREATORBUG-20377
Change-Id: I366cba77ef56d81dcdaf619c697c60396eeec651
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>